--- a/day-3.html
+++ b/day-3.html
@@ -1,1 +1,24 @@
+<!doctype html>
+<html lang=“en”>
 
+<head>
+  <title>About Me</title>
+</head>
+
+<body>
+  <!-- page content goes in here -->
+  <div class="container">
+    <div class="header">
+      <h1>About Me</h1>
+    </div><!-- end header -->
+    <div class="image">
+      <img src="">
+    </div><!-- end image -->
+    <div class="intro column">
+      <h2>Introduction</h2>
+    </div><!-- end intro column -->
+  </div><!-- end container -->
+
+</body>
+
+</html>
