--- a/final_project/index.html
+++ b/final_project/index.html
@@ -41,10 +41,10 @@
       </div> <!--/navbar header -->
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#about">ABOUT</a></li>
-          <li><a href="#skills">SKILLS</a></li>
-          <li><a href="#projects">PROJECTS</a></li>
-          <li><a href="#contact">CONTACT</a></li>
+          <li><a href="#about"><p class="space">ABOUT</p></a></li>
+          <li><a href="#skills"><p class="space">SKILLS</p></a></li>
+          <li><a href="#projects"><p class="space">PROJECTS</p></a></li>
+          <li><a href="#contact"><p class="space">CONTACT</p></a></li>
         </ul>
       </div> <!--/navbar-collapse -->
     </nav> <!--/navbar -->
