--- a/final_project/index.html
+++ b/final_project/index.html
@@ -186,7 +186,7 @@
 <!-- footer -->
 
     <footer class="container text-center footer">
-      <p>&copy; Emma Donnelly (2017)</p>
+      <p class="pfooter">&copy; Emma Donnelly (2017)</p>
     </footer>
 
 <!-- end of segments -->
