--- a/final_project/index.html
+++ b/final_project/index.html
@@ -181,7 +181,9 @@
     <div class="container-fluid bg-5 text-center" id="contact">
       <h3 class="margin-bottom">Contact Me</h3>
       <p>Feel free to drop me an email at test@notreal.com</p>
+      <button style="font-size:24px">facebook<i class="fa fa-facebook-official"></i></button>
     </div><!--/bg-5-->
+
 
 <!-- footer -->
 
@@ -208,3 +210,4 @@
 
   </body>
 </html>
+
