social media buttons

--- a/final_project/index.html
+++ b/final_project/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <!-- Web fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Homemade+Apple|Open+Sans">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Personal CSS-->
     <link rel="stylesheet" href="css/styles.css">
 
@@ -181,8 +182,11 @@
     <div class="container-fluid bg-5 text-center" id="contact">
       <h3 class="margin-bottom">Contact Me</h3>
       <p>Feel free to drop me an email at test@notreal.com</p>
-      <button style="font-size:24px">facebook<i class="fa fa-facebook-official"></i></button>
-    </div><!--/bg-5-->
+      <a href="https://github.com/altcodegirl"><i class="fa fa-github" style="font-size:36px"></i></a>
+      <a href="https://www.linkedin.com/in/emdonnelly/"><i class="fa fa-linkedin-square" style="font-size:36px"></i></a>
+      <a href="https://twitter.com/altcodegirl"><i class="fa fa-twitter" style="font-size:36px"></i></a>
+
+
 
 
 <!-- footer -->
