--- a/final_project/index.html
+++ b/final_project/index.html
@@ -182,10 +182,11 @@
     <div class="container-fluid bg-5 text-center" id="contact">
       <h3 class="margin-bottom">Contact Me</h3>
       <p>Feel free to drop me an email at test@notreal.com</p>
+      <br>
       <a href="https://github.com/altcodegirl"><i class="fa fa-github" style="font-size:36px"></i></a>
       <a href="https://www.linkedin.com/in/emdonnelly/"><i class="fa fa-linkedin-square" style="font-size:36px"></i></a>
       <a href="https://twitter.com/altcodegirl"><i class="fa fa-twitter" style="font-size:36px"></i></a>
-
+    </div>
 
 
 
@@ -214,4 +215,5 @@
 
   </body>
 </html>
+
 
