--- a/final_project/index.html
+++ b/final_project/index.html
@@ -108,7 +108,11 @@
 
     <div class="container-fluid bg-3 text-center" id="skills">
       <h3 class="margin-bottom">Skills</h3>
-      <p>HTML, CSS, javascript - make cute buttons for all my skills?</p>
+      <button type="button" class="btn btn-primary btn-md">HTML5</button>
+      <button type="button" class="btn btn-primary btn-md">CSS3</button>
+      <button type="button" class="btn btn-primary btn-md">JavaScript</button>
+      <button type="button" class="btn btn-primary btn-md">p5.js</button>
+      <button type="button" class="btn btn-primary btn-md">Bootstrap</button>
     </div><!--/bg-3-->
 
 <!-- Projects -->
