fixed country select

--- a/final_project/index.html
+++ b/final_project/index.html
@@ -84,8 +84,9 @@
           </div>
           <div id="collapseTwo" class="panel-collapse collapse in">
             <div class="panel-body">
-              Online: Udemy, Code Academy, freecodecamp, Khan Academy, CareerFoundry, General Assembly
-              Offline: RailsGirls, Women Who Code
+              <p>I’ve been teaching myself the web development fundamentals using online resources such as Code Academy, freeCodeCamp, Udemy, and General Assembly. I’ve also attended some workshops to learn alongside others, including Rails Girls, Women Who Code, and Django Girls.</p>
+              <p>I have a good grasp of HTML, CSS, and Bootstrap, and am working on developing my knowledge in JavaScript and Ruby. I’m at the stage where I can successfully debug my code, and even when I don’t know something I’m confident that I’ll be able to find out the answer online.</p>
+              <p>As a side project an awesome friend has been helping me learn p5.js - it’s very different to everything I’ve covered previously, and I love the creative possibilities. I’ll need to brush up on my maths, but it’s definitely something I wish to pursue further. </p>
             </div> <!--/panel-body -->
           </div> <!--/panel-collapse-->
           <div class="panel-heading">
@@ -97,7 +98,9 @@
           </div>
           <div id="collapseThree" class="panel-collapse collapse">
             <div class="panel-body">
-              I'd like to explore JavaScript and Ruby on Rails, jQuery, Wordpress, PHO, MySQL, APIs, Mobile Apps, Python, MVC
+              <p>I’m currently finishing off a few projects that I want to complete before the end of the year. In January I will be starting a six-month course with Career Foundry, after which I will be looking for work as a junior developer.</p>
+              <p>I’d also like to learn new languages on the arts side of things - once I’ve got a good grasp of p5.js I’d like to try my hand at Processing.</p>
+              <p>Beyond that suggestions are very welcome - feel free to drop me a message below!</p>
             </div><!--/panel-body -->
           </div><!--/panel-collapse-->
         </div><!--/panel-default-->
@@ -188,9 +191,9 @@
       <div class="contactform">
         <form action="/action_page.php">
           <label for="fname">First Name</label>
-          <input type="text" id="fname" name="firstname" placeholder="Your name..">
+          <input type="text" id="fname" name="firstname" placeholder="Your name...">
           <label for="lname">Last Name</label>
-          <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+          <input type="text" id="lname" name="lastname" placeholder="Your last name...">
           <label for="country">Country</label>
           <select id="country" name="country">
             <option value="AFG">Afghanistan</option>
@@ -427,7 +430,7 @@
           	<option value="UGA">Uganda</option>
           	<option value="UKR">Ukraine</option>
           	<option value="ARE">United Arab Emirates</option>
-          	<option value="GBR">United Kingdom</option>
+          	<option value="GBR" selected="select">United Kingdom</option>
           	<option value="USA">United States</option>
           	<option value="UMI">United States Minor Outlying Islands</option>
           	<option value="URY">Uruguay</option>
@@ -444,7 +447,7 @@
           	<option value="ZWE">Zimbabwe</option>
           </select>
           <label for="subject">Subject</label>
-          <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+          <textarea id="subject" name="subject" placeholder="Write something..." style="height:200px"></textarea>
           <input type="submit" value="Submit">
         </form>
       </div>
