--- a/final_project/index.html
+++ b/final_project/index.html
@@ -82,7 +82,7 @@
               </a>
             </h4>
           </div>
-          <div id="collapseTwo" class="panel-collapse collapse in">
+          <div id="collapseTwo" class="panel-collapse collapse">
             <div class="panel-body">
               <p>I’ve been teaching myself the web development fundamentals using online resources such as Code Academy, freeCodeCamp, Udemy, and General Assembly. I’ve also attended some workshops to learn alongside others, including Rails Girls, Women Who Code, and Django Girls.</p>
               <p>I have a good grasp of HTML, CSS, and Bootstrap, and am working on developing my knowledge in JavaScript and Ruby. I’m at the stage where I can successfully debug my code, and even when I don’t know something I’m confident that I’ll be able to find out the answer online.</p>
